load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/protoconf/protoconf/cmd/pc4tf",
    visibility = ["//visibility:private"],
    deps = [
        "//command:go_default_library",
        "//pc4tf/generate:go_default_library",
        "@com_github_mitchellh_cli//:go_default_library",
    ],
)

go_binary(
    name = "pc4tf",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
