load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "protoconf",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//agent",
        "//command",
        "//compiler",
        "//inserter",
        "//server",
        "@com_github_mitchellh_cli//:go_default_library",
    ],
)
