load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "protoconf",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "protoconf.com/cmd/protoconf",
    visibility = ["//visibility:private"],
    deps = [
        "//agent",
        "//command",
        "//compiler",
        "//inserter",
        "//server",
        "@com_github_mitchellh_cli//:go_default_library",
    ],
)
