load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "protoconf",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "protoconf-darwin",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "darwin",
    pure = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "protoconf-linux",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "protoconf-windows",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "windows",
    pure = "on",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/protoconf/protoconf/cmd/protoconf",
    visibility = ["//visibility:private"],
    deps = [
        "//agent:go_default_library",
        "//command:go_default_library",
        "//compiler",
        "//exec:go_default_library",
        "//importers/golang_importer:go_default_library",
        "//importers/terraform_importer:go_default_library",
        "//inserter:go_default_library",
        "//mutate:go_default_library",
        "//server",
        "@com_github_mitchellh_cli//:go_default_library",
    ],
)
