load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "protoconf.com/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//command",
        "//server",
    ],
)
