load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "compiler.go",
        "config.go",
        "filesystem.go",
        "filesystem_js.go",
        "starlark_functions.go",
        "starlark_loader.go",
    ],
    importpath = "github.com/protoconf/protoconf/compiler/lib",
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/starproto:go_default_library",
        "//consts:go_default_library",
        "//datatypes/proto/v1:go_default_library",
        "//utils:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_jhump_protoreflect//desc/protoparse:go_default_library",
        "@com_github_jhump_protoreflect//dynamic:go_default_library",
        "@com_github_qri_io_starlib//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
        "@net_starlark_go//resolve:go_default_library",
        "@net_starlark_go//starlark:go_default_library",
        "@net_starlark_go//starlarkstruct:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["compiler_test.go"],
    data = ["testdata"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)
