load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "enum.go",
        "enum_type.go",
        "field.go",
        "map.go",
        "message.go",
        "message_type.go",
        "repeated.go",
    ],
    importpath = "github.com/protoconf/protoconf/compiler/starproto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_jhump_protoreflect//desc:go_default_library",
        "@com_github_jhump_protoreflect//dynamic:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
        "@net_starlark_go//starlark:go_default_library",
        "@net_starlark_go//syntax:go_default_library",
    ],
)
