load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "config_proto",
    srcs = ["exec_config.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

go_proto_library(
    name = "config_go_proto",
    importpath = "github.com/protoconf/protoconf/exec/config",
    proto = ":config_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":config_go_proto"],
    importpath = "github.com/protoconf/protoconf/exec/config",
    visibility = ["//visibility:public"],
)
