load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "v2_proto",
    srcs = ["exec_config.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

go_proto_library(
    name = "v2_go_proto",
    importpath = "github.com/protoconf/protoconf/exec/v2",
    proto = ":v2_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":v2_go_proto"],
    importpath = "github.com/protoconf/protoconf/exec/v2",
    visibility = ["//visibility:public"],
)
